--- a/Configurator.UI/appsettings.Development.json
+++ b/Configurator.UI/appsettings.Development.json
@@ -1,9 +1,4 @@
 {
-  "UseHotUpdate": true,
-  "env": "dev",
-  "Services": {
-
-  },
   "AuthenticationEncKey": "92929292929292932",
-  "SuspendSignalR": "true"
+  "AllowedOrigins": "http://localhost:8050,http://127.0.0.1:8050,http://localhost:4200"
 }
