--- a/Configurator.UI/angular.json
+++ b/Configurator.UI/angular.json
@@ -36,7 +36,23 @@
                             "src/favicon.ico",
                             "src/assets"
                         ],
-                        "styles": [],
+                        "styles": [
+                            {
+                                "bundleName": "primeicons",
+                                "input": "node_modules/primeicons/primeicons.css",
+                                "inject": true
+                            },
+                            {
+                                "bundleName": "primeng.min",
+                                "input": "node_modules/primeng/resources/primeng.min.css",
+                                "inject": true
+                            },
+                            {
+                                "bundleName": "primeng.theme",
+                                "input": "node_modules/primeng/resources/themes/saga-blue/theme.css",
+                                "inject": true
+                            }
+                        ],
                         "scripts": []
                     },
                     "configurations": {
