--- a/Configurator.UI/package.json
+++ b/Configurator.UI/package.json
@@ -36,6 +36,7 @@
     "ngx-owl-carousel-o": "^5.0.0",
     "ngx-quill": "^13.1.0",
     "ngx-toastr": "^13.2.0",
+    "primeicons": "^4.1.0",
     "primeng": "^11.3.2",
     "quill": "^1.3.7",
     "rxjs": "~6.6.0",
