--- a/Configurator.Config.Api/appsettings.json
+++ b/Configurator.Config.Api/appsettings.json
@@ -9,5 +9,6 @@
     "LocalizationRoot": "{PARENT}\\Configurator",
     "ConfigUrl": "http://localhost:8000"
   },
-  "AuthenticationEncKey": "92929292929292932"
+  "AuthenticationEncKey": "92929292929292932",
+  "AllowedOrigins": "http://127.0.0.1:8050,http://127.0.0.1:8051"
 }
