--- a/Configurator.UI/package.json
+++ b/Configurator.UI/package.json
@@ -25,6 +25,8 @@
     "@angular/router": "~11.0.0",
     "@aspnet/signalr": "^1.1.4",
     "@circlon/angular-tree-component": "^11.0.4",
+    "@danielmoncada/angular-datetime-picker": "^11.0.0",
+    "@microsoft/signalr": "^5.0.9",
     "@ng-select/ng-select": "^6.1.0",
     "@ngx-translate/core": "^13.0.0",
     "angular2-datetimepicker": "^1.1.1",
